feat: 5/6 課程結束